--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -55,7 +55,7 @@
 							<a href="#">
 								<img class="project" src="assets/images/pacman.png" alt="pacman" />
 							</a>
-							<p class="project-link">Pac-man game</p>
+							<p class="project-link">Pac-man</p>
 						</div>
 						<div class="carousel "></div>
 					</div>
