--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 			<h2 class="message"><span class="score">Score: 0</span></h2>
 			<div class="grid"></div>
 			<div>
-				<div><button type="button"  class="btn-up btn"><i class="fas fa-arrow-circle-up"></i></button></div>
+				<div><button type="button"  class="btn-up btn">up</button></div>
 				<div class="centre-btn btn">
-					<button type="button"  class="btn-left btn"><i class="fas fa-arrow-circle-left"></i></button>
-					<button type="button" class="btn-right btn"><i class="fas fa-arrow-circle-right"></i></button>
+					<button type="button"  class="btn-left btn">left</button>
+					<button type="button" class="btn-right btn">right</button>
 				</div>
-				<div><button type="button" class="btn-down btn"><i class="fas fa-arrow-circle-down"></i></button></div>
+				<div><button type="button" class="btn-down btn">down</button></div>
 			</div>
 		</div>
 		<script type="text/javascript" src="assets/js/index.js"></script>
