--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -75,7 +75,7 @@
 						<a href="#" class="previous" type="button"><i class="fas fa-long-arrow-alt-left fa-3x"></i></a>
 						<div class="projects carousels">
 							<div class="carousel carousel-active" >
-								<a href="https://willtheastroboy.github.io"><img class="project" src="assets/images/snake1.png" alt="snake-game" /></a>
+								<a href="assets/projects/Snake Game/index.html"><img class="project" src="assets/images/snake1.png" alt="snake-game" /></a>
 								<p class="project-link" ><a href="https://willtheastroboy.github.io">View Project</a></p>
 							</div>
 							<div class="carousel ">
@@ -89,7 +89,7 @@
 								<p class="project-link"><a href="#">View Project</a></p>
 							</div>
 							<div class="carousel ">
-								<a href="https://willtheastroboy.github.io/projects/blog">
+								<a href="assets/projects/test/test.html">
 									<img class="project" src="assets/images/blog/blog.png" alt="blog" />
 								</a>
 								<p class="project-link"><a href="https://willtheastroboy.github.io/projects/blog">View Project</a></p>
