--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -76,7 +76,7 @@
 						<div class="projects carousels">
 							<div class="carousel carousel-active" >
 								<a href="assets/projects/Snake Game/index.html"><img class="project" src="assets/images/snake1.png" alt="snake-game" /></a>
-								<p class="project-link" ><a href="https://willtheastroboy.github.io">View Project</a></p>
+								<p class="project-link" ><a href="assets/projects/Snake Game/index.html">View Project</a></p>
 							</div>
 							<div class="carousel ">
 								<a href="http://varyns.000webhostapp.com"><img class="project" src="assets/images/varyns.png" alt="Varyns computer"/></a>
@@ -92,7 +92,7 @@
 								<a href="assets/projects/test/test.html">
 									<img class="project" src="assets/images/blog/blog.png" alt="blog" />
 								</a>
-								<p class="project-link"><a href="https://willtheastroboy.github.io/projects/blog">View Project</a></p>
+								<p class="project-link"><a href="assets/projects/test/test.html">View Project</a></p>
 							</div>
 						</div>
 						<a href="#" class="next" type="button"><i class="fas fa-long-arrow-alt-right fa-3x"></i></a>
