--- a/portfolio/assets/projects/test/about-me.html
+++ b/portfolio/assets/projects/test/about-me.html
@@ -17,8 +17,8 @@
             </div>
             <nav class="column nav">
                 <ul class="nav-list">
-                    <li><a href="#" class="current-page">home</a></li>
-                    <li><a href="about-me.html">about me</a></li>
+                    <li><a href="#" >home</a></li>
+                    <li><a href="about-me.html" class="current-page">about me</a></li>
                     <li><a href="recent-posts.html">recent posts</a></li>
                 </ul>
             </nav>
@@ -28,11 +28,13 @@
     <div class="container container-main">
         <main>
             <article class="article-featured">
-                <h2 class="article-title">Finding simplicity in life</h2>
+                <h2 class="article-title">Lorem ipsum dolor sit amet</h2>
                 <img class="article-img" src="work.jfif" alt="home" />
                 <p class="article-info">July 23, 2019  |  3 comments</p>
-                <p class="article-body">Life can get complicated really quickly, but it doesn't have to be! There are many ways to simplify your life, a few of which we've explored in the past. This week we're taking a bit of a approach though, in how you can find simplicity in the life you already living.</p>
-                <a class="article-read-more" href="#">continue reading</a>
+                <p class="txt-1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <p class="txt-2"> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p class="txt-3"> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                
             </article>
         </main>
         <aside class="sidebar">
