--- a/portfolio/assets/projects/test/recent-posts.html
+++ b/portfolio/assets/projects/test/recent-posts.html
@@ -17,9 +17,9 @@
             </div>
             <nav class="column nav">
                 <ul class="nav-list">
-                    <li><a href="#" class="current-page">home</a></li>
+                    <li><a href="#" >home</a></li>
                     <li><a href="about-me.html">about me</a></li>
-                    <li><a href="recent-posts.html">recent posts</a></li>
+                    <li><a href="recent-posts.html" class="current-page">recent posts</a></li>
                 </ul>
             </nav>
         </div>
