--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -92,7 +92,7 @@
 								<p class="project-link"><a href="http://varyns.000webhostapp.com">View Project</a></p>
 							</div>
 							<div class="carousel ">
-								<a href="#">
+								<a href="assets/projects/bbq/index.html">
 									<img class="project" src="assets/images/bbq.png" alt="template" />
 								</a>
 								<p class="project-link"><a href="assets/projects/bbq/index.html">View Project</a></p>
