--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -102,7 +102,7 @@
 								<a href="#">
 									<img class="project" src="assets/images/pacman.png" alt="pacman" />
 								</a>
-								<p class="project-link"><a href="#">View Project</a></p>
+								<p class="project-link"><a href="assets/projects/pacman/index.html">View Project</a></p>
 							</div>
 							<div class="carousel ">
 								<a href="assets/projects/test/test.html">
