--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -99,7 +99,7 @@
 							</div>
 							
 							<div class="carousel ">
-								<a href="#">
+								<a href="assets/projects/pacman/index.html">
 									<img class="project" src="assets/images/pacman.png" alt="pacman" />
 								</a>
 								<p class="project-link"><a href="assets/projects/pacman/index.html">View Project</a></p>
