--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -117,18 +117,18 @@
             <a href="mailto:aslamidrs@gmail.com" class="email">aslamidrs@gmail.com</p>
             <ul class="social-list">
                 <li class="social-list__item">
-                    <a href="#" class="social-list__link">
+                    <a href="https://twitter.com/aslamidrs" class="social-list__link">
                         <i class="fab fa-twitter"></i>
                     </a>
                 </li>
                 <li class="social-list__item">
-                    <a href="#" class="social-list__link">
+                    <a href="https://github.com/WillTheAstroBoy" class="social-list__link">
                         <i class="fab fa-github"></i>
                     </a>
                 </li>
                 <li class="social-list__item">
-                    <a href="#" class="social-list__link">
-                        <i class="fab fa-instagram"></i>
+                    <a href="https://www.linkedin.com/in/aslam-idrisi-a6aa89195/" class="social-list__link">
+                        <i class="fab fa-linkedin-in"></i>
                     </a>
                 </li>
             </ul>
