added React projects

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -82,6 +82,12 @@
                 <h2 class="my-work-title">My work</h2>
                 <h4 class="my-work-description">A selection of my range of work</h4>
                 <div class="projects">
+                    <a href="projects/netflix-clone.html" class="project">
+                        <img class="project-img" src="images/projects/netflix.png" alt="React netflix clone app"/>
+                    </a>
+                    <a href="projects/instagram-clone.html" class="project">
+                        <img class="project-img" src="images/projects/instagram.png" alt="React instagram clone app"/>
+                    </a>
                     <a href="projects/bbq.html" class="project">
                         <img class="project-img" src="images/projects/bbq.png" alt="invitation-seminar"/>
                     </a>
