adding external project links and some styling

--- a/portfolio/projects/netflix-clone.html
+++ b/portfolio/projects/netflix-clone.html
@@ -32,7 +32,7 @@
 
             <section class="project-details">
                 <p>Voluptatibus, soluta blanditiis! Incidunt ea unde itaque illo molestiae eligendi sint culpa nobis voluptas sapiente voluptate, magnam ipsum eius earum?</p>
-                <img  src="../images/projects/netflix.png" alt=""/>
+                <a class="project-real-link" href="https://xenodochial-goldberg-e7b073.netlify.app/"><img  src="../images/projects/netflix.png" alt=""/></a>
                 <p>
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe et amet tenetur! Fugit sequi optio corrupti fugiat ducimus consequatur incidunt?
 
