--- a/portfolio/projects/instagram-clone.html
+++ b/portfolio/projects/instagram-clone.html
@@ -32,7 +32,7 @@
 
             <section class="project-details">
                 <p>Voluptatibus, soluta blanditiis! Incidunt ea unde itaque illo molestiae eligendi sint culpa nobis voluptas sapiente voluptate, magnam ipsum eius earum?</p>
-                <a class="project-real-link" href="https://tender-mayer-44f857.netlify.app/signin"><img  src="../images/projects/instagram.png" alt=""/></a>
+                <a class="project-real-link" href="https://tender-mayer-44f857.netlify.app"><img  src="../images/projects/instagram.png" alt=""/></a>
                 <p>
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe et amet tenetur! Fugit sequi optio corrupti fugiat ducimus consequatur incidunt?
 
