some more changes

--- a/portfolio/projects/netflix-clone.html
+++ b/portfolio/projects/netflix-clone.html
@@ -31,12 +31,12 @@
             </section>
 
             <section class="project-details">
-                <p>Voluptatibus, soluta blanditiis! Incidunt ea unde itaque illo molestiae eligendi sint culpa nobis voluptas sapiente voluptate, magnam ipsum eius earum?</p>
+                <p>This application (a Netflix clone) was built using React (Custom Hooks, Context), Firebase & Styled Components.</p>
                 <a class="project-real-link" href="https://xenodochial-goldberg-e7b073.netlify.app"><img  src="../images/projects/netflix.png" alt=""/></a>
                 <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe et amet tenetur! Fugit sequi optio corrupti fugiat ducimus consequatur incidunt?
+                    I have built the following pages within this application: sign in, sign up, browse & lastly the homepage. There are four different pages, some using protected routes with auth listeners. Firebase firestore handles all the data and that data is retrieved using a custom hook; authentication is used on all pages, which is handled by Firebase as well.
 
-Voluptatibus, soluta blanditiis! Incidunt ea unde itaque illo molestiae eligendi sint culpa nobis voluptas sapiente voluptate, magnam ipsum eius earum?
+I used compound components (just a design pattern) to build my components. The styling is all handled via styled components. Using compound components made my actual dumb components really easy to test.
                 </p>
             </section>
 
