--- a/portfolio/projects/instagram-clone.html
+++ b/portfolio/projects/instagram-clone.html
@@ -31,12 +31,10 @@
             </section>
 
             <section class="project-details">
-                <p>Voluptatibus, soluta blanditiis! Incidunt ea unde itaque illo molestiae eligendi sint culpa nobis voluptas sapiente voluptate, magnam ipsum eius earum?</p>
+                <p>This application (Instagram clone) was built using React (Custom Hooks, Context), Firebase & Styled components.</p>
                 <a class="project-real-link" href="https://tender-mayer-44f857.netlify.app"><img  src="../images/projects/instagram.png" alt=""/></a>
                 <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe et amet tenetur! Fugit sequi optio corrupti fugiat ducimus consequatur incidunt?
-
-Voluptatibus, soluta blanditiis! Incidunt ea unde itaque illo molestiae eligendi sint culpa nobis voluptas sapiente voluptate, magnam ipsum eius earum?
+                    I have built the following pages within this application: login, sign up, dashboard & lastly the user profile page. There are four different pages, some are public and some are private with auth listeners. Firebase firestore handles all the data, and that data is retrieved using a custom hook.
                 </p>
             </section>
 
