made some changes to project description.

--- a/portfolio/projects/bbq.html
+++ b/portfolio/projects/bbq.html
@@ -31,12 +31,10 @@
             </section>
 
             <section class="project-details">
-                <p>Voluptatibus, soluta blanditiis! Incidunt ea unde itaque illo molestiae eligendi sint culpa nobis voluptas sapiente voluptate, magnam ipsum eius earum?</p>
+                <p>This Page(invitation-card) was built using HTML5 and CSS.</p>
                 <img  src="../images/projects/bbq.png" alt=""/>
                 <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe et amet tenetur! Fugit sequi optio corrupti fugiat ducimus consequatur incidunt?
-
-Voluptatibus, soluta blanditiis! Incidunt ea unde itaque illo molestiae eligendi sint culpa nobis voluptas sapiente voluptate, magnam ipsum eius earum?
+                    I have used some deep level CSS like flexbox, linear-gradient and followed all important User Interface rules. I have used flexbox to align and position each element.
                 </p>
             </section>
 
