--- a/portfolio/projects/blog.html
+++ b/portfolio/projects/blog.html
@@ -31,12 +31,12 @@
             </section>
 
             <section class="project-details">
-                <p>Voluptatibus, soluta blanditiis! Incidunt ea unde itaque illo molestiae eligendi sint culpa nobis voluptas sapiente voluptate, magnam ipsum eius earum?</p>
+                <p>This Blog template was built using HTML and CSS. I have used HTML elements like article, anchor tags, button and many more.
+                    I used CSS properties to create this blog template. 
+                </p>
                 <img  src="../images/projects/blog.png" alt=""/>
                 <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe et amet tenetur! Fugit sequi optio corrupti fugiat ducimus consequatur incidunt?
-
-Voluptatibus, soluta blanditiis! Incidunt ea unde itaque illo molestiae eligendi sint culpa nobis voluptas sapiente voluptate, magnam ipsum eius earum?
+                    I have built the following pages within this blog template: home and profile. There are two different pages built with advanced flexbox.    
                 </p>
             </section>
 
