--- a/portfolio/projects/gscracker.html
+++ b/portfolio/projects/gscracker.html
@@ -31,12 +31,13 @@
             </section>
 
             <section class="project-details">
-                <p>Voluptatibus, soluta blanditiis! Incidunt ea unde itaque illo molestiae eligendi sint culpa nobis voluptas sapiente voluptate, magnam ipsum eius earum?</p>
+                <p>This website was built as a freelance work for a education start-up which provides free course material as well as tution to needy student.</p>
                 <img  src="../images/projects/gs-cracker.png" alt=""/>
                 <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe et amet tenetur! Fugit sequi optio corrupti fugiat ducimus consequatur incidunt?
-
-Voluptatibus, soluta blanditiis! Incidunt ea unde itaque illo molestiae eligendi sint culpa nobis voluptas sapiente voluptate, magnam ipsum eius earum?
+                    I have built the following pages within this website: sign in, sign up, home, study material page, browse video page.
+                    Firebase firestore handles all the data and that data is retrieved using js functions.
+                    I used event listeners, custom functions to handle all the functioning of the webpages. 
+                    I have used APIs like Google API and Adobe API to make this work.
                 </p>
             </section>
 
