--- a/portfolio/projects/punkBearApi.html
+++ b/portfolio/projects/punkBearApi.html
@@ -31,12 +31,11 @@
             </section>
 
             <section class="project-details">
-                <p>Voluptatibus, soluta blanditiis! Incidunt ea unde itaque illo molestiae eligendi sint culpa nobis voluptas sapiente voluptate, magnam ipsum eius earum?</p>
+                <p>This Application(Bear Wiki) was built using JavaScript, HTML and CSS.</p>
                 <img  src="../images/projects/punkBearApi.png" alt=""/>
                 <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe et amet tenetur! Fugit sequi optio corrupti fugiat ducimus consequatur incidunt?
-
-Voluptatibus, soluta blanditiis! Incidunt ea unde itaque illo molestiae eligendi sint culpa nobis voluptas sapiente voluptate, magnam ipsum eius earum?
+                    I have built this App using Punk Bear API. You can browse most kind of bears on this app. I made JavaScript function to handle API call and handle the request.
+                    I used fetch to call the Punk Bear API and used javaScript Promises to get the data from Punk Bear API.
                 </p>
             </section>
 
