--- a/portfolio/projects/pacman.html
+++ b/portfolio/projects/pacman.html
@@ -31,12 +31,10 @@
             </section>
 
             <section class="project-details">
-                <p>Voluptatibus, soluta blanditiis! Incidunt ea unde itaque illo molestiae eligendi sint culpa nobis voluptas sapiente voluptate, magnam ipsum eius earum?</p>
+                <p>This game(Pacman) was built using JavaScript, HTML and CSS.</p>
                 <img  src="../images/projects/pacman.png" alt=""/>
                 <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe et amet tenetur! Fugit sequi optio corrupti fugiat ducimus consequatur incidunt?
-
-Voluptatibus, soluta blanditiis! Incidunt ea unde itaque illo molestiae eligendi sint culpa nobis voluptas sapiente voluptate, magnam ipsum eius earum?
+                    I have built this game with JavaScript. I used array to make game board. I have used interval functions to move ghouls and gave them intelligence so they won't get stuck to the wall. I also added event listeners which listens to key press so we can move the pacman. I totally enjoyed building this Js game.    
                 </p>
             </section>
 
