added more project detail

--- a/portfolio/projects/randomJokeApp.html
+++ b/portfolio/projects/randomJokeApp.html
@@ -31,12 +31,10 @@
             </section>
 
             <section class="project-details">
-                <p>Voluptatibus, soluta blanditiis! Incidunt ea unde itaque illo molestiae eligendi sint culpa nobis voluptas sapiente voluptate, magnam ipsum eius earum?</p>
+                <p>This app was built using JavaScript, CSS and HTML.</p>
                 <img  src="../images/projects/randomJokeApp1.png" alt=""/>
                 <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe et amet tenetur! Fugit sequi optio corrupti fugiat ducimus consequatur incidunt?
-
-Voluptatibus, soluta blanditiis! Incidunt ea unde itaque illo molestiae eligendi sint culpa nobis voluptas sapiente voluptate, magnam ipsum eius earum?
+                    I have built this app with the help of fetch. A JavaScript function is used to make fetch call and I used JSON.parse() to get data. I used used a Math.random() to randomly select a joke then used event listener to get the punchline when user clicks on the button.     
                 </p>
             </section>
 
