--- a/portfolio/projects/varyns.html
+++ b/portfolio/projects/varyns.html
@@ -31,12 +31,15 @@
             </section>
 
             <section class="project-details">
-                <p>Voluptatibus, soluta blanditiis! Incidunt ea unde itaque illo molestiae eligendi sint culpa nobis voluptas sapiente voluptate, magnam ipsum eius earum?</p>
-                <img  src="../images/projects/varyns.png" alt=""/>
+                <p>This website was one of my first project. It was built using PHP, JavaScript, HTML and CSS.</p>
+                <img src="../images/projects/varyns.png" alt=""/>
                 <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe et amet tenetur! Fugit sequi optio corrupti fugiat ducimus consequatur incidunt?
-
-Voluptatibus, soluta blanditiis! Incidunt ea unde itaque illo molestiae eligendi sint culpa nobis voluptas sapiente voluptate, magnam ipsum eius earum?
+                    I have built the following pages within the website: sign in, sign up, browse, search and home.
+                    Some of these pages are protected and others are not. I have extensively used PHP to make these pages. I have php template to stop myself from repeating the same code. I made PHP scripts to handle Sign in and Sign up. I used php in backend to handle search page, sign in, and sign up.
+                    I have extensively used cookies to identify if a user is logged in or not.
+                    I added event listeners to the pages to control the search form and show searched products to the user.
+                    I added pagination in backend. I used MySQL database to handle sign in and sign up as well as product data. I created relational database to create cart functionality.
+                    I enjoyed and learnt a lot of stuff while working on this project.
                 </p>
             </section>
 
