--- a/portfolio/projects/weatherApp.html
+++ b/portfolio/projects/weatherApp.html
@@ -31,12 +31,11 @@
             </section>
 
             <section class="project-details">
-                <p>Voluptatibus, soluta blanditiis! Incidunt ea unde itaque illo molestiae eligendi sint culpa nobis voluptas sapiente voluptate, magnam ipsum eius earum?</p>
+                <p>This application(Weather App) was built using JavaScript, CSS and HTML.</p>
                 <img  src="../images/projects/weatherApp1.png" alt=""/>
                 <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe et amet tenetur! Fugit sequi optio corrupti fugiat ducimus consequatur incidunt?
-
-Voluptatibus, soluta blanditiis! Incidunt ea unde itaque illo molestiae eligendi sint culpa nobis voluptas sapiente voluptate, magnam ipsum eius earum?
+                    I have built this Single Page Application(SPA) using JavaScript to request weather data from this free Weather API that i found on internet. I added event listener to listen for the submit then i use the location typed in to send the data to the API using a function then i get back all the data.
+                    I added some background pictures which changes with the temperature using If-Else condition. 
                 </p>
             </section>
 
