added project links

--- a/projects/bbq.html
+++ b/projects/bbq.html
@@ -32,7 +32,7 @@
 
             <section class="project-details">
                 <p>This Page(invitation-card) was built using HTML5 and CSS.</p>
-                <img  src="../images/projects/bbq.png" alt=""/>
+                <a href="./assests/bbq/index.html"><img  src="../images/projects/bbq.png" alt=""/></a>
                 <p>
                     I have used some deep level CSS like flexbox, linear-gradient and followed all important User Interface rules. I have used flexbox to align and position each element.
                 </p>
