--- a/projects/blog.html
+++ b/projects/blog.html
@@ -34,7 +34,7 @@
                 <p>This Blog template was built using HTML and CSS. I have used HTML elements like article, anchor tags, button and many more.
                     I used CSS properties to create this blog template. 
                 </p>
-                <img  src="../images/projects/blog.png" alt=""/>
+                <a href="./assests/blog/index.html"><img  src="../images/projects/blog.png" alt=""/></a>
                 <p>
                     I have built the following pages within this blog template: home and profile. There are two different pages built with advanced flexbox.    
                 </p>
