--- a/projects/pacman.html
+++ b/projects/pacman.html
@@ -32,7 +32,7 @@
 
             <section class="project-details">
                 <p>This game(Pacman) was built using JavaScript, HTML and CSS.</p>
-                <img  src="../images/projects/pacman.png" alt=""/>
+                <a href="./assests/pacman/index.html" ><img  src="../images/projects/pacman.png" alt=""/></a>
                 <p>
                     I have built this game with JavaScript. I used array to make game board. I have used interval functions to move ghouls and gave them intelligence so they won't get stuck to the wall. I also added event listeners which listens to key press so we can move the pacman. I totally enjoyed building this Js game.    
                 </p>
