--- a/projects/punkBearApi.html
+++ b/projects/punkBearApi.html
@@ -32,7 +32,7 @@
 
             <section class="project-details">
                 <p>This Application(Bear Wiki) was built using JavaScript, HTML and CSS.</p>
-                <img  src="../images/projects/punkBearApi.png" alt=""/>
+                <a href="./assests/punkBear/index.html"><img  src="../images/projects/punkBearApi.png" alt=""/></a>
                 <p>
                     I have built this App using Punk Bear API. You can browse most kind of bears on this app. I made JavaScript function to handle API call and handle the request.
                     I used fetch to call the Punk Bear API and used javaScript Promises to get the data from Punk Bear API.
