--- a/projects/randomJokeApp.html
+++ b/projects/randomJokeApp.html
@@ -32,7 +32,7 @@
 
             <section class="project-details">
                 <p>This app was built using JavaScript, CSS and HTML.</p>
-                <img  src="../images/projects/randomJokeApp1.png" alt=""/>
+                <a href="./assests/randomJokeApp/index.html" ><img  src="../images/projects/randomJokeApp1.png" alt=""/></a>
                 <p>
                     I have built this app with the help of fetch. A JavaScript function is used to make fetch call and I used JSON.parse() to get data. I used used a Math.random() to randomly select a joke then used event listener to get the punchline when user clicks on the button.     
                 </p>
