--- a/projects/snake-game.html
+++ b/projects/snake-game.html
@@ -32,7 +32,7 @@
 
             <section class="project-details">
                 <p>This game(Classic Snake) was built using JavaScript, HTML and CSS.</p>
-                <img  src="../images/projects/snake.png" alt=""/>
+                <a href="./assests/Snake/index.html" ><img  src="../images/projects/snake.png" alt=""/></a>
                 <p>
                     I have built this game(Classic Snake) with JavaScript. I used array to make game board. I have used interval functions to move Snake  and used Math.random() to generate food at random places on the grid. I also added event listeners which listens to key press so we can move the Classic Snake. I totally enjoyed building this Js game.
                 </p>
