--- a/projects/varyns.html
+++ b/projects/varyns.html
@@ -32,7 +32,7 @@
 
             <section class="project-details">
                 <p>This website was one of my first project. It was built using PHP, JavaScript, HTML and CSS.</p>
-                <img src="../images/projects/varyns.png" alt=""/>
+                <a href="./assests/varyns/index.html" ><img src="../images/projects/varyns.png" alt=""/></a>
                 <p>
                     I have built the following pages within the website: sign in, sign up, browse, search and home.
                     Some of these pages are protected and others are not. I have extensively used PHP to make these pages. I have php template to stop myself from repeating the same code. I made PHP scripts to handle Sign in and Sign up. I used php in backend to handle search page, sign in, and sign up.
