--- a/projects/weatherApp.html
+++ b/projects/weatherApp.html
@@ -32,7 +32,7 @@
 
             <section class="project-details">
                 <p>This application(Weather App) was built using JavaScript, CSS and HTML.</p>
-                <img  src="../images/projects/weatherApp1.png" alt=""/>
+                <a href="./assests/weatherApp/index.html"><img  src="../images/projects/weatherApp1.png" alt=""/></a>
                 <p>
                     I have built this Single Page Application(SPA) using JavaScript to request weather data from this free Weather API that i found on internet. I added event listener to listen for the submit then i use the location typed in to send the data to the API using a function then i get back all the data.
                     I added some background pictures which changes with the temperature using If-Else condition. 
