made much needed grammar corrections.

--- a/index.html
+++ b/index.html
@@ -39,21 +39,21 @@
                         Design+Development
                     </h3>
                     <p class="my-services-card-body">
-                        I have been Designing and developing websites, Single Page Applications and landing pages from a year now. I use HTML, CSS and JavaScript to make custom and client specific websites and SPAs. I also have experiece with BootStrap and other web development technologies.
+                        I have been Designing and Developing websites, Single Page Applications and landing pages from a year now. I use HTML, CSS and JavaScript to make custom and client specific websites and SPAs. I also have experiece with BootStrap and other web development technologies.
                         I'm interested in Clean code principle and testing.
                     </p>
                 </div>
                 <div class="my-services-card">
                     <h3 class="my-services-card-title">Back-End</h3>
                     <p class="my-services-card-body">
-                        I have worked with NOSQL databases like Google Firebase and SQL database like MYSQL and with relational Database to store user data and content. I have worked with php to control user verification and user log in.
+                        I have worked with NOSQL database Google Firebase and SQL database MySQL and with relational Database to store user data and content. I have worked with php to control user verification and user log in.
                     </p>
                 </div>
                 <div class="my-services-card">
                     <h3 class="my-services-card-title">React JS</h3>
                     <p class="my-services-card-body">
-                        React is my strong hold i have developed games like Pacman, Snake and Single Page Applications like Netflix Clone and Instagram Clone to practice, refine and show my skills.
-                        while making these SPAs i have used several React technologies like React hooks like useState to save states, useEffect to call APIs, useRef to focus on inputs, React Memo for optimizing SPAs and stop from unnecessary state updates. I worked with Promise to handle API calls and then use the data in the SPAs. 
+                        React is my strong hold I have developed several games, one is similar to Pacman and the other Snake. As Single Page Applications I have cloned Netflix and Instagram for practice, refine & display my skills.
+                        While making these SPAs i have used several React technologies like React hooks like useState to save states, useEffect to call APIs, useRef to focus on inputs, React Memo for optimizing SPAs and stop from unnecessary state updates. I worked with Promise to handle API calls and then use the data in the SPAs. 
                     </p>
                 </div>
                 <a href="#work" class="my-services-btn btn">My work</a>
