some minor content  change

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <div class="my-services-card">
                     <h3 class="my-services-card-title">Back-End</h3>
                     <p class="my-services-card-body">
-                        I have worked with NOSQL database Google Firebase and SQL database MySQL and with relational Database to store user data and content. I have worked with php to control user verification and user log in.
+                        I have worked with NOSQL databases like Google Firebase Firestore and SQL databases like MySQL and with relational Database to store user data and content. I have worked with php to control user verification and user log in.
                     </p>
                 </div>
                 <div class="my-services-card">
